2009-07-23  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsterm.m (EmacsView-keyUp:): Only act when running under Tiger.

2009-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* fileio.c (Vauto_save_include_big_deletions): New variable.
	(Fdo_auto_save): Disable auto-save only if
	auto-save-include-big-deletions is nil.

2009-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (move_it_to): For continued lines ending in a tab, take
	the overflowed pixels into account (Bug#3879).

2009-07-17  Kenichi Handa  <handa@m17n.org>

	* casetab.c (shuffle): Fix the logic of setting up the cycle.

2009-07-16  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* nsfns.m (Fns_set_alpha): Remove function.
	(syms_of_nsfns): Don't defsubr it.

	* nsterm.m (ns_get_color): Remove incompatible color formats.
	(ns_color_to_lisp): Generate #rrggbb color format string.

2009-07-15  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* nsfont.m (nsfont_draw): Remove code for stippling, which actually
	does tiling.

	* nsterm.m (ns_maybe_dumpglyphs_background): Likewise.

2009-07-14  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfont.m (ns_has_attribute): Remove.
	(ns_findfonts, nsfont_open): Use ns_attribute_fvalue() instead.

2009-07-13  Kenichi Handa  <handa@m17n.org>

	* chartab.c (sub_char_table_ref_and_range): Fix the range check
	against max_char.

	* cmds.c (internal_self_insert): Check sym by SYMBOLP before
	calling XSYMBOL (sym).

2009-07-10  Kenichi Handa  <handa@m17n.org>

	* xftfont.c (xftfont_open): Fix typo: FC_RGBA->FC_HINT_STYLE.

2009-07-10  Eli Zaretskii  <eliz@gnu.org>

	* w32proc.c (syms_of_ntproc) <w32-get-true-file-attributes>: Doc
	fix.

	* w32.c (stat): Treat UNC file names as residing on remote
	drives.  (Bug#3542)

2009-07-08  Kenichi Handa  <handa@m17n.org>

	* coding.h (JIS_TO_SJIS2): Fix the code range check.

	* coding.c (detect_coding_sjis): Handle shift_jis-2004 correctly.
	(encode_coding_sjis): Fix the code range check.
