@@ -1,6 +1,11 @@
 2009-07-23  Adrian Robert  <Adrian.B.Robert@gmail.com>
 
 	* nsterm.m (EmacsView-keyUp:): Only act when running under Tiger.
+	Bugs 3792, 3720, 2402.
+	(ns_lookup_indexed_color): Check for bad index.
+	(ns_index_color): Init unused slot to 0.
+	(ns_dumpglyphs_box_or_relief): Replace useless xassert with an if().
+	Bug 3714, possibly 3082.
 
 2009-07-21  Chong Yidong  <cyd@stupidchicken.com>
 
